--- a/Practice/TaskForWinForms/WinFormsTabControl/WinFormsTabControl.csproj
+++ b/Practice/TaskForWinForms/WinFormsTabControl/WinFormsTabControl.csproj
@@ -8,4 +8,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Calculator\FormCalculator\FormCalculator.csproj" />
+    <ProjectReference Include="..\Menu\FormMenu\FormMenu.csproj" />
+    <ProjectReference Include="..\RGB\FormRGB\FormRGB.csproj" />
+  </ItemGroup>
+
 </Project>
