--- a/CodeBlog/Lesson26.1/Lesson26.1.csproj
+++ b/CodeBlog/Lesson26.1/Lesson26.1.csproj
@@ -8,4 +8,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="EcoCore" Version="7.0.0.14643" />
+    <PackageReference Include="System.Text.Json" Version="7.0.2" />
+  </ItemGroup>
+
 </Project>
