--- a/Practice/Service/WindowsServiceArchiver/packages.config
+++ b/Practice/Service/WindowsServiceArchiver/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="NLog" version="5.2.0" targetFramework="net48" />
+  <package id="NLog.Config" version="4.7.15" targetFramework="net48" />
+  <package id="NLog.Schema" version="4.7.15" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
 </packages>
